# type-practice

./: .gitignore  LICENSE  README.md  type-practice.cabal
app/: Main.hs
src/: GameState.hs  MainLoop.hs  Render.hs
test/: Spec.hs
