name:                type-practice
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adamrk/type-practice#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Bratschi-Kaye
maintainer:          ark.email@gmail.com
copyright:           All Rights Reserved
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Render
                     , GameState
                     , MainLoop
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable type-practice-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , type-practice
  default-language:    Haskell2010

test-suite type-practice-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , type-practice
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adamrk/type-practice
